fix(security): override default 401 spring security lockout and configure explicit CORS origins